--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -210,6 +210,10 @@ input {
     transform: translateX(100%);
 }
 
+#signUpButton {
+    margin-top: 10px;
+}
+
 .sign-up-container {
     left: 0;
     width: 50%;
@@ -407,6 +411,7 @@ footer a {
     position: relative;
     display: inline-block;
     width: 100%;
+    font-size: 13px;
 }
 
 .searchable-select input {
@@ -414,7 +419,7 @@ footer a {
     border: 1px solid #c2f4fd;
     padding: 12px 15px;
     width: 100%;
-    font-size: 1rem;
+    font-size: 13px;
     box-sizing: border-box;
     z-index: 2; /* Ensure input field is above other content */
 }
@@ -427,7 +432,7 @@ footer a {
     background: #fff;
     border: 1px solid #c2f4fd;
     border-top: none;
-    max-height: 200px;
+    max-height: 130px;
     overflow-y: auto;
     padding: 0;
     margin: 0;
