🩹 fix - #4 회원가입 시 유효성 검사 기능, 경고창 추가

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -188,9 +188,9 @@ input {
     0 10px 10px rgba(0,0,0,0.22);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 800px;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 550px;
 }
 
 .form-container {
@@ -449,4 +449,13 @@ footer a {
 
 .searchable-select ul li:hover {
     background: #f0faff;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.7em;
+    display: none;
+}
+input.invalid {
+    border-color: red;
 }
