✨ update  : 상단바 로그인 버튼 클릭시 로그인/회원가입 페이지 로 이동, 로그인시 Home 페이지로 이동

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -115,6 +115,7 @@ body {
     top: 0;
     left: 0;
     z-index: 2000;
+    box-sizing: border-box;
 }
 
 .logo {
@@ -133,6 +134,7 @@ body {
     cursor: pointer;
     font-weight: bold;
     transition: background 0.3s, box-shadow 0.3s, transform 0.3s;
+    margin-left: 10px;
 }
 
 .add-task-button:hover {
