--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -3,6 +3,6 @@
         <div class="logo">
             <span>Study Trek</span>
         </div>
-        <button class="add-task-button">Login</button>
+        <button class="add-task-button" onclick="location.href='/api/auth'">Login</button>
     </div>
 </div>
