--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -118,6 +118,10 @@ body {
     box-sizing: border-box;
 }
 
+.black-text {
+    color: black !important;
+}
+
 .logo {
     display: flex;
     align-items: center;
