--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>홈</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5.0.0/dark.css">
+    <!-- SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/scripts.js}" defer></script>
 </head>
 <body th:classappend="${isDarkMode} ? 'dark' : ''">
@@ -12,12 +16,12 @@
 <div class="main-container">
     <div th:replace="~{'fragments/sidebar' :: sidebar(isSidebarOpen=${isSidebarOpen}, isDarkMode=${isDarkMode})}"></div>
     <div class="content">
-        <h1>Welcome Home!</h1>
-        <p>You have successfully logged in.</p>
+        <h1>환영합니다!</h1>
+        <p>성공적으로 로그인되었습니다.</p>
     </div>
 </div>
 <button class="open-sidebar-button hidden" th:onclick="|javascript:toggleSidebar()|">
-    <img th:src="@{/images/icon-show-sidebar.svg}" alt="Show Sidebar Icon" />
+    <img th:src="@{/images/icon-show-sidebar.svg}" alt="사이드바 아이콘 보이기" />
 </button>
 </body>
 </html>
