🎉 add : 질문 페이지 추가

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -16,8 +16,8 @@
             <a class="sidebar-link" th:href="@{/api/settings}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Settings</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/etc}">
-                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>기타</span>
+            <a class="sidebar-link" th:href="@{/api/question}">
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Question</span>
             </a>
             <a class="sidebar-link" th:href="@{/api/more}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>등등</span>
