--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Topbar</title>
 </head>
 <body>
 <div th:fragment="topbar">
@@ -10,10 +11,9 @@
             <span>Study Trek</span>
         </div>
         <nav class="topbar-menu">
-            <nav class="topbar-menu">
-                <a class="topbar-link" th:href="@{/api/settings}"><span>Welcome</span></a>
-                <a class="topbar-link" th:href="@{/api/etc}"><span>To</span></a>
-                <a class="topbar-link" th:href="@{/api/more}"><span>Study Trek</span></a>
+            <a class="topbar-link" th:href="@{/api/settings}"><span>Welcome</span></a>
+            <a class="topbar-link" th:href="@{/api/etc}"><span>To</span></a>
+            <a class="topbar-link" th:href="@{/api/more}"><span>Study Trek</span></a>
         </nav>
         <button class="add-task-button" id="loginButton" onclick="location.href='/api/auth'">Login</button>
     </div>
