✨ update : - #6 작성 취소 시, 리뷰 메인 화면으로 이동

--- a/src/main/resources/templates/review/reviewAdd.html
+++ b/src/main/resources/templates/review/reviewAdd.html
@@ -100,7 +100,7 @@
                     <textarea id="review-content" name="review-content" required></textarea>
                 </div>
                 <div class="button-group">
-                    <button type="button" class="cancel-button" onclick="cancelReview()">취소</button>
+                    <button type="button" class="cancel-button" onclick="cancelReview()" th:data-cancel-url="@{/api/review}">취소</button>
                     <button type="submit" class="submit-button">리뷰 제출</button>
                 </div>
             </form>
