✨ update - #6 작성 완료 시, 상세 페이지 이동 (연동X)

--- a/src/main/resources/templates/review/reviewAdd.html
+++ b/src/main/resources/templates/review/reviewAdd.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="button-group">
                     <button type="button" class="cancel-button" onclick="cancelReview()" th:data-cancel-url="@{/api/review}">취소</button>
-                    <button type="submit" class="submit-button">리뷰 제출</button>
+                    <button type="submit" class="submit-button" th:data-submit-url="@{/api/review/detail}">리뷰 제출</button>
                 </div>
             </form>
         </div>
