--- a/src/main/resources/static/css/topsearch.css
+++ b/src/main/resources/static/css/topsearch.css
@@ -19,10 +19,9 @@ body.dark {
     --body-bg: #2B2C37;
     --color: #FFFFFF;
     --hover-bg: #3A3B47;
-    --search-rew-bg: #20212C
 }
 .search-rew {
-    background-color: var(--search-rew-bg);
+    background-color: var(--sidebar-bg);
     color: var(--color);
 }
 
@@ -70,7 +69,6 @@ body.dark {
 .search-input input {
     color: var(--color);
     min-width: 500px;
-    background-color: transparent;
 }
 .search-button, .filter-button {
     flex: 0 0 auto; /* 내용물 크기만큼만 차지 */
@@ -79,15 +77,7 @@ body.dark {
     padding: 10px 20px;
     white-space: nowrap;
 }
-.login-link {
-    margin-left: auto;
-    text-decoration: none;
-    color: #c2f4fd;
-    font-weight: bold;
-    /*flex: 1 1 100%;*/
-    flex: 0;
-    text-align: right;
-}
+
 select, input[type="text"], button {
     padding: 10px;
     border: 1px solid #ddd;
@@ -99,10 +89,26 @@ button {
     color: var(--color);
     border: none;
     cursor: pointer;
+    font-weight: bold;
     transition: background-color 0.3s;
 }
 button:hover {
-    background-color: #c9fffa;
+    background-color: #5AA9E6;
+}
+.main-search-btn {
+    background-color: #7FC8F8;
+}
+.main-filter-btn {
+    background-color: #7FC8F8;
+}
+.main-filter-btn:hover {
+    background-color: #FFE45E;
+}
+.main-filter-reset:hover {
+    background-color: #FF6B35;
+}
+.main-filter-apply {
+    background-color: #7FC8F8;
 }
 .filter-container {
     display: none;
@@ -140,7 +146,8 @@ button:hover {
     max-height: 0;
 }
 .filter-option {
-    background-color: #e0e0e0;
+    background-color: var(--sidebar-bg);
+    font-weight: bold;
     padding: 5px 10px;
     border-radius: 15px;
     font-size: 14px;
@@ -151,8 +158,7 @@ button:hover {
     background-color: #d0d0d0;
 }
 .filter-option.active {
-    background-color: #c2f4fd;
-    color: white;
+    background-color: #7FC8F8;
 }
 .filter-actions {
     display: flex;
@@ -169,8 +175,8 @@ button:hover {
     margin-top: 20px;
 }
 .selected-filter {
-    background-color: #c2f4fd;
-    color: white;
+    background-color: #7FC8F8;
+    font-weight: bold;
     padding: 5px 10px;
     border-radius: 15px;
     font-size: 14px;
