🩹 fix - #6 리뷰 메인 화면 다크모드 설정, 버튼 컬러 수정, 좋아요 모양 수정

--- a/src/main/resources/templates/review/reviewMain.html
+++ b/src/main/resources/templates/review/reviewMain.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홈</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
-
     <link rel="stylesheet" th:href="@{/css/review/reviewMain.css}">
     <link rel="stylesheet" th:href="@{/css/topsearch.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5.0.0/dark.css">
     <!-- SweetAlert2 JS -->
@@ -33,7 +33,7 @@
                         <h2>Write a Review</h2>
                         <p>Share your experience with others</p>
                     </div>
-                    <button class="write-review-button learn-more" onclick="location.href='https://reviewsite.com/write-review'">Start a Review</button>
+                    <button class="write-review-button learn-more" onclick="addReview()" th:review-add-url="@{/api/review/add}">Start a Review</button>
                 </div>
             </div>
         </div>
