--- a/src/main/resources/static/css/review/reviewMain.css
+++ b/src/main/resources/static/css/review/reviewMain.css
@@ -124,19 +124,29 @@ h1 {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: background-color 0.3s, color 0.3s;
     flex-shrink: 0;
 }
-.heart-icon:hover {
-    background-color: #e0e0e0;
+.heart-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: var(--color);
+    transition: transform 0.2s ease;
 }
-.heart-icon.liked {
-    background-color: #f8d7ff;
-    color: white;
+.heart-button:hover {
+    transform: scale(1.1);
+}
+.heart-button .far {
+    color: #ccc; /* 기본 색상 */
+}
+
+.heart-button .fas {
+    color: red; /* 클릭 후 색상 */
 }
 .reviewer-info {
     display: flex;
@@ -159,7 +169,7 @@ span.review-category {
     font-size: 0.8em;
 }
 .review-stars {
-    color: #ffc107;
+    color: #FFE45E;
     font-size: 1.2em;
     margin: 5px 0;
 }
@@ -184,9 +194,9 @@ span.review-category {
     margin-top: 20px;
 }
 .pagination button {
-    background-color: #c2f4fd;
+    background-color: #7FC8F8;
     width: 90px;
-    color: white;
+    color: var(--color);
     border: none;
     padding: 10px 15px;
     margin: 0 5px;
@@ -194,10 +204,10 @@ span.review-category {
     transition: background-color 0.3s;
 }
 .pagination button:hover:not(:disabled) {
-    background-color: #c2f4fd;
+    background-color: #5AA9E6;
 }
 .pagination button:disabled {
-    background-color: #cccccc;
+    background-color: var(--sidebar-bg);
     cursor: not-allowed;
 }
 .page-numbers {
@@ -208,16 +218,16 @@ span.review-category {
     padding: 5px 10px;
     margin: 0 2px;
     cursor: pointer;
-    border: 1px solid #c2f4fd;
-    color: #8beeff;
+    border: 1px solid #7FC8F8;
+    color: var(--color);
+    font-weight: bold;
     transition: background-color 0.3s, color 0.3s;
 }
 .page-number:hover:not(.active) {
-    background-color: #e8f5e9;
+    background-color: #5AA9E6;
 }
 .page-number.active {
-    background-color: #c2f4fd;
-    color: white;
+    background-color: #7FC8F8;
 }
 
 :root {
