--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -6,6 +6,7 @@
     <title>홈</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/review/reviewDetail.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5.0.0/dark.css">
     <!-- SweetAlert2 JS -->
@@ -26,7 +27,7 @@
                         <h2 class="review-title">Pine Valley Campground에서의 친절한 직원들</h2>
                         <p class="review-subtitle" id="subtitleDisplay">소제목1</p> <!-- 소제목을 표시할 부분 -->
                     </div>
-                    <button class="heart-button" onclick="toggleLike(this)">♡</button>
+                    <div class="reviews heart-icon heart-button"><i class="far fa-heart"></i></div>
                 </div>
 
                 <div class="meta-info">
@@ -60,12 +61,12 @@
                     <div class="form-group">
                         <label for="editTitle">제목</label>
                         <div class="form-description">제목을 입력하세요.</div>
-                        <input type="text" id="editTitle" value="Pine Valley Campground에서의 친절한 직원들" required>
+                        <input class="form-group-title" type="text" id="editTitle" value="Pine Valley Campground에서의 친절한 직원들" required>
                     </div>
                     <div class="form-group">
                         <label for="editSubtitle">부트캠프</label>
                         <div class="form-description">리뷰할 부트캠프를 선택하세요</div>
-                        <select id="editSubtitle" name="editSubtitle" required>
+                        <select class="form-group-camp" id="editSubtitle" name="editSubtitle" required>
                             <option value="" disabled>부트캠프 선택</option>
                             <option value="소제목1" selected>소제목1</option>
                             <option value="소제목2">소제목2</option>
@@ -75,7 +76,7 @@
                     <div class="form-group">
                         <label for="editCategory">카테고리</label>
                         <div class="form-description">리뷰와 관련된 카테고리를 선택하세요.</div>
-                        <select id="editCategory" required>
+                        <select class="form-group-category" id="editCategory" required>
                             <option value="Forest" selected>Forest</option>
                             <option value="Mountain">Mountain</option>
                             <option value="Lake">Lake</option>
@@ -85,7 +86,7 @@
                     <div class="form-group">
                         <label for="editDevCategory">트랙</label>
                         <div class="form-description">리뷰와 관련된 트랙을 선택하세요.</div>
-                        <select id="editDevCategory" required>
+                        <select class="form-group-track" id="editDevCategory" required>
                             <option value="Frontend">Frontend</option>
                             <option value="Backend">Backend</option>
                             <option value="Fullstack" selected>Fullstack</option>
@@ -95,7 +96,7 @@
                     <div class="form-group">
                         <label for="editRating">평점</label>
                         <div class="form-description">리뷰의 평점을 선택하세요.</div>
-                        <select id="editRating" required>
+                        <select class="form-group-star" id="editRating" required>
                             <option value="5" selected>★★★★★</option>
                             <option value="4">★★★★☆</option>
                             <option value="3">★★★☆☆</option>
@@ -116,8 +117,8 @@
 
             전반적으로, Pine Valley Campground는 가족 여행이나 친구들과의 아웃도어 활동을 위한 완벽한 장소입니다. 친절한 직원들, 잘 관리된 시설, 아름다운 자연 환경이 어우러져 최고의 캠핑 경험을 선사합니다. 다음에 또 방문하고 싶은 곳이에요!</textarea>
                     </div>
-                    <button type="submit">저장</button>
-                    <button type="button" onclick="cancelEdit()">취소</button>
+                    <button class="editMode-submit" type="submit">저장</button>
+                    <button class="editMode-cancel" type="button" onclick="cancelEdit()">취소</button>
                 </form>
             </div>
 
