✨ update - #6 사이드바에 리뷰 메인 추가

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -25,6 +25,9 @@
             <a class="sidebar-link" th:href="@{/api/anything}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>아무거나</span>
             </a>
+            <a class="sidebar-link" th:href="@{/api/review}">
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Review</span>
+            </a>
         </nav>
         <div class="theme-toggle">
             <img th:src="@{/images/icon-light-theme.svg}" alt="Light Theme Icon" />
