🩹 fix - #12 sidebar 기존 settings를 스터디 메인 페이지로 리다이렉트되게 설정

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -13,8 +13,8 @@
             <a class="sidebar-link" th:href="@{/api/profile}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Profile</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/settings}">
-                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Settings</span>
+            <a class="sidebar-link" th:href="@{/api/study/main}">
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Study</span>
             </a>
             <a class="sidebar-link" th:href="@{/api/etc}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>기타</span>
