--- a/src/main/resources/static/css/study/StudyDetail.css
+++ b/src/main/resources/static/css/study/StudyDetail.css
@@ -207,7 +207,7 @@ body {
     margin-bottom: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    background-color: #2B2C37;
+    background-color: var(--body-bg);
     color:white;
 }
 
