✨ update - #7 부트캠프 모집글 사이드바 추가

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -28,6 +28,9 @@
             <a class="sidebar-link" th:href="@{/api/review}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Review</span>
             </a>
+            <a class="sidebar-link" th:href="@{/api/camp}">
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Camp Recruit</span>
+            </a>
         </nav>
         <div class="theme-toggle">
             <img th:src="@{/images/icon-light-theme.svg}" alt="Light Theme Icon" />
