🐛 bugfix  : 버그 수정중

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -76,8 +76,8 @@
         </div>
     </div>
 </div>
-<button class="open-sidebar-button hidden" th:onclick="|javascript:toggleSidebar()|">
-    <img th:src="@{/images/icon-show-sidebar.svg}" alt="사이드바 아이콘 보이기" />
+<button class="open-sidebar-button hidden" onclick="toggleSidebar()">
+    <img src="/images/icon-show-sidebar.svg" alt="사이드바 아이콘 보이기" />
 </button>
 <!-- SweetAlert2 JS -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
