🩹 fix - #7 부트캠프 컬러 수정

--- a/src/main/resources/static/css/recruitment/recruitmentAdd.css
+++ b/src/main/resources/static/css/recruitment/recruitmentAdd.css
@@ -137,7 +137,7 @@ body.dark {
     background-color: #f0f0f0;
 }
 .error-message {
-    color: red;
+    color: #FF6B35;
     font-size: 14px;
     margin-top: 5px;
 }
