--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -29,7 +29,7 @@
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Review</span>
             </a>
             <a class="sidebar-link" th:href="@{/api/camp}">
-                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Camp Recruit</span>
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Camp</span>
             </a>
         </nav>
         <div class="theme-toggle">
