--- a/src/main/resources/static/css/recruitment/recruitmentMain.css
+++ b/src/main/resources/static/css/recruitment/recruitmentMain.css
@@ -27,7 +27,7 @@ body.dark {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 .review-section {
-    background-color: var(--sidebar-bg);
+    background-color: var(--body-bg);
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
