--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -11,9 +11,9 @@
             <span>Study Trek</span>
         </div>
         <nav class="topbar-menu">
-            <a class="topbar-link" th:href="@{/api/settings}"><span>Welcome</span></a>
-            <a class="topbar-link" th:href="@{/api/etc}"><span>To</span></a>
-            <a class="topbar-link" th:href="@{/api/more}"><span>Study Trek</span></a>
+            <a class="topbar-link" href="#" onclick="refreshPage()"><span>Welcome</span></a>
+            <a class="topbar-link" href="#" onclick="refreshPage()"><span>To</span></a>
+            <a class="topbar-link" href="#" onclick="refreshPage()"><span>Study Trek</span></a>
         </nav>
         <button class="add-task-button" id="loginButton" onclick="location.href='/api/auth'">Login</button>
     </div>
