--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -193,9 +193,11 @@ body {
     margin-top: 60px;
 }
 
+
 .content {
-    margin-left: 280px;
-    transition: margin-left 0.3s ease;
+    margin-left: 270px;
+    margin-right: 100px;
+    transition: margin-left 0.3s ease, margin-right 0.3s ease;
     flex: 1;
     overflow: hidden;
 }
