--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -171,11 +171,6 @@ h1, h2 {
     margin-right: 350px;
 }
 
-.comment-and-writeQuestionPage {
-    margin-left: 390px;
-    margin-right: 370px;
-}
-
 .question-title {
     font-weight: bold;
     font-size: 18px;
@@ -211,9 +206,16 @@ h1, h2 {
 .pagination button {
     padding: 5px 10px;
     color: var(--color);
-    background-color: var(--body-bg);
+    background-color: var(--sidebar-bg);
     margin: 0 5px;
     cursor: pointer;
+    border: none;
+    transition: background-color 0.3s;
+}
+
+.pagination button.active, .pagination button:focus {
+    background-color: #7FC8F8;
+    color: #fff;
 }
 
 
@@ -324,4 +326,41 @@ label {
     display: flex;
     justify-content: flex-end;
     margin-top: 10px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: var(--body-bg);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.close {
+    color: var(--color);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
